# warehouse-backend

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  applog.hpp  build.bat  build_image.bat  config.cpp  config.h  controller_actor.cpp  controller_actor.h  database.cpp  database.h  database_actor.cpp  database_actor.h  ec.cpp  ec.h  http_server.cpp  http_server.h  item.hpp  main.cpp  types.hpp  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
distributed-nodes/: CMakeLists.txt  README.md  app.hpp  caf-application.conf  child_membership.h  client.conf  client_main.cpp  cluster.hpp  compute-a1.conf  compute_main.cpp  main.cpp  master.conf  master_main.cpp  master_state.h  membership_registry.h  node_config.hpp  node_heartbeat.hpp  node_rpc.hpp  node_runtime.hpp  node_shutdown_flow.hpp  node_types.hpp  region-a.conf  region_main.cpp  region_state.h  run-demo.ps1  shutdown_signal.hpp  start-client.cmd  start-client.ps1  start-nodes.ps1  stop-nodes.ps1  storage-a1.conf  storage_main.cpp
distributed-nodes/scripts/: run-demo.cmd  start-client.ps1  start-nodes.cmd  start-nodes.ps1  stop-nodes.cmd
work/: caf-application.conf
